argocd/02-ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints: 
    - websecure
  routes:
  - kind: Rule
    match: Host(`cloud-argocd.ucdialplans.com`) 
    services:
    - name: argocd-server
      port: 80
    middlewares:
    - name: traefik-security
      namespace: traefik
  - kind: Rule
    match: Host(`cloud-argocd.ucdialplans.com`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
    middlewares:
    - name: traefik-security
      namespace: traefik      
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
